# safeverify

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  __git_check.txt  __gitlog.txt  alembic.ini  docker-compose.monitoring.yml  docker-compose.production.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  release.yml  security.yml
alembic/: env.py
alembic/versions/: b932724e12f4_initial_saas_schema.py
docs/: API.md  STRIPE_PRODUCTION.md
infra/: main.tf  prod.tfvars.example  prometheus.yml
infra/grafana/dashboards/: hashguard-api.json
infra/grafana/provisioning/dashboards/: default.yml
nginx/: nginx.conf.template
scripts/: _check_ingest.py  audit_full.py  backfill_iocs.py  backup.sh  check_iocs.py  db_audit.py  db_audit_deep.py  db_check_fullresult.py  db_check_scores.py  db_fix_mb_scores.py  db_fix_mb_scores2.py  db_repair.py  db_repair_fullresult.py  db_sync_dataset_labels.py  debug_family.py  deploy_vps.sh  hashguard-cli.spec  hashguard-gui.spec  hashguard-installer.nsi  hashguard.manifest  ingest_200k.sh  investigate_scores.py  migrate_to_postgres.py  rescore_all.py  test_ingest.py  test_ml_train.py  verify_scores.py  version_info_cli.py  version_info_gui.py
src/hashguard/: __init__.py  __main__.py  advanced_pe.py  anomaly_detector.py  anonymizer.py  batch_ingest.py  capability_detector.py  cli.py  cloud_storage.py  config.py  database.py  deobfuscator.py  family_detector.py  feature_extractor.py  fuzzy_hasher.py  gui.py  ioc_enrichment.py  ioc_graph.py  logger.py  malware_cluster.py  malware_timeline.py  memory_analyzer.py  ml_classifier.py  ml_trainer.py  models.py  pe_analyzer.py  reports.py  risk_scorer.py  sandbox.py  scanner.py  sdk.py  stix_exporter.py  string_extractor.py  tasks.py  threat_intel.py  unpacker.py  yara_scanner.py
src/hashguard/data/: pe_indicators.json  signatures.json
src/hashguard/web/: api.py  auth.py  billing.py  csrf.py  email_service.py  metrics.py  usage_metering.py  users.py  webhooks.py
src/hashguard/web/routers/: __init__.py  admin_router.py  auth_router.py  billing_router.py  branding_router.py  dataset_hub_router.py  feeds_router.py  oauth_router.py  soc_router.py  team_router.py
src/hashguard/web/templates/: coming_soon.html  index.html  landing.html
src/hashguard/yara_rules/: c2_frameworks.yar  default.yar  destructive.yar  documents.yar  evasion.yar  exploits.yar  linux_malware.yar  miners.yar  persistence.yar  ransomware.yar  rootkits.yar  scripts.yar  stealers.yar  supply_chain.yar  trojans.yar
tests/: conftest.py  test___main__.py  test_admin_router.py  test_advanced_pe.py  test_anomaly_detector.py  test_anonymizer.py  test_auth.py  test_auth_extended.py  test_auth_router_extended.py  test_batch_db_soc_feat.py  test_batch_ingest.py  test_batch_ingest_extended.py  test_billing.py  test_billing_extended.py  test_billing_router.py  test_branding.py  test_capability_detector.py  test_cli.py  test_cli_extended.py  test_cloud_storage.py  test_config.py  test_config_extended.py  test_coverage_95.py  test_coverage_boost.py  test_coverage_gaps.py  test_coverage_push_1.py  test_coverage_push_2.py  test_csrf.py  test_database.py  test_dataset_hub_router.py  test_deobfuscator.py  test_email_service.py  test_email_service_extended.py  test_family_detector.py  test_feature_extractor.py  test_feeds_api.py  test_gui.py  test_ioc_enrichment.py  test_ioc_graph.py  test_logger.py  (+43 more)
yara_rules/: default.yar  packers.yar  trojans.yar
